# haygeom

./: Cargo.toml  README.md  hayashi.toml
.github/workflows/: release.yml
examples/: README.md  map_brazil.hay
examples/basic/: debug.hay  simple.hay  test.hay
examples/brazil/: map_brazil.hay  map_brazil_municipalities.hay
examples/cleanup/: check_favelas.hay  check_population.hay  find_pelotas.hay
examples/rs/: map_rs_conservation.hay  map_rs_favelas.hay  map_rs_indigenous.hay  map_rs_layers.hay  map_rs_municipalities.hay  map_rs_pop_arrangement.hay  map_rs_population.hay
src/: lib.rs  wkt.rs
