[package]
name = "haygeom"
version = "0.1.0"
edition = "2021"
description = "Geographic mapping plugin for Hayashi"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
hayashi-plugin-sdk = { git = "https://github.com/sheep-farm/hayashi-plugin-sdk.git", branch = "main" }
serde_json = "1.0"
